Fix a crash when renaming a tag

There were multiple problems that caused the crash. Under some
circumstances, including wrong tag cache value, the tag chooser
widget could try to dereference a null pointer.

(the patch still doesn't fix the issue of the renamed tags
reappearing after Krita restart, but that is a different
issue)

BUG:453831